--- a/CGM_V4/CGM_V4.vcxproj
+++ b/CGM_V4/CGM_V4.vcxproj
@@ -145,6 +145,7 @@
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CGM_Button2D.h" />
     <ClInclude Include="CGM_Canvas2D.h" />
     <ClInclude Include="CGM_Log_addon.h" />
     <ClInclude Include="CGM_Region2D.h" />
