Changed a few things
Reworked the button, moved color to CGM::Color, Added SetRegion to Entity2D, Ent2<T>_util is the new typedef name, transformed BaseShape into a template

--- a/CGM_V4/CGM_V4.vcxproj
+++ b/CGM_V4/CGM_V4.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CGM_Button2D.cpp" />
     <ClCompile Include="CGM_Canvas2D.cpp" />
     <ClCompile Include="CGM_Shapes2D.cpp" />
     <ClCompile Include="CGM_TextBox2D.cpp" />
