Added ButtonMatrix, and polished some floors...
Added ButtonMatrix, Button can now clear text, TextBox can now save empty texts

--- a/CGM_V4/CGM_V4.vcxproj
+++ b/CGM_V4/CGM_V4.vcxproj
@@ -140,6 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="CGM_Button2D.cpp" />
+    <ClCompile Include="CGM_ButtonMatrix2D.cpp" />
     <ClCompile Include="CGM_Canvas2D.cpp" />
     <ClCompile Include="CGM_Shapes2D.cpp" />
     <ClCompile Include="CGM_TextBox2D.cpp" />
@@ -147,6 +148,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CGM_Button2D.h" />
+    <ClInclude Include="CGM_ButtonMatrix2D.h" />
     <ClInclude Include="CGM_Canvas2D.h" />
     <ClInclude Include="CGM_Log_addon.h" />
     <ClInclude Include="CGM_Region2D.h" />
